# isotopes-core

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: PRD.md
isotopes_core/: __init__.py  events.py  loop.py  types.py
src/isotopes_core/: __init__.py  agent.py  events.py  middleware.py  tools.py  types.py
src/isotopes_core/providers/: __init__.py  base.py
tests/: test_loop.py  test_tools.py  test_types.py
